--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,34 @@
     transition: all 0.3s ease-in-out;
 }
 
+*::-moz-selection {
+    color: #fff;
+    background: #333;
+}
+
+*::selection {
+    color: #fff;
+    background: #333;
+}
+
+body::-webkit-scrollbar {
+    width: 5px;
+    /* width of the entire scrollbar */
+}
+
+body::-webkit-scrollbar-track {
+    background: #fff;
+    /* color of the tracking area */
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: #333;
+    /* color of the scroll thumb */
+    border-radius: 20px;
+    /* roundness of the scroll thumb */
+    /* creates padding around scroll thumb */
+}
+
 h2 {
     padding: 30px;
 }
@@ -84,7 +112,7 @@ li:active {
 
 .line {
     border-top: 1px solid var(--title2-color);
-    width: 80%;
+    width: 60%;
     margin: 30px auto;
 }
 
@@ -315,9 +343,5 @@ footer p a {
     .contenu {
         display: block;
         height: 4300px;
-    }
-
-    nav {
-        display: none;
     }
 }
