--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -337,11 +337,15 @@ footer p a {
 }
 
 
+/* 10 - TRANSLATE 
+************************************************************************************************************************* */
+.flag img {
+    position: fixed;
+    width: 5%;
+    top: 20px;
+    left: 20px;
+    border-radius: 4px;
+}
+
 /* 10 - MEDIA-QUERIES 
 ************************************************************************************************************************* */
-@media screen and (max-width: 700px) {
-    .contenu {
-        display: block;
-        height: 4300px;
-    }
-}
