--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,8 +146,8 @@ header h2 {
 /* 4 - NAVBAR 
 ************************************************************************************************************************* */
 nav {
-    background: linear-gradient(90deg, rgba(33, 33, 33, 1) 0%, rgba(33, 33, 33, 1) 35%, rgba(51, 51, 51, 1) 50%, rgba(33, 33, 33, 1) 65%, rgba(33, 33, 33, 1) 100%);
-    opacity: 0.9;
+    background: linear-gradient(to right, #212121 0%, #444444 50%, #212121 100%);
+    opacity: 1;
     text-align: center;
     padding: 18px 18px;
 }
@@ -283,21 +283,6 @@ footer p a {
     color: var(--title1-color);
 }
 
-#target {
-    display: flex;
-    width: 300px;
-    text-align: left;
-    animation: color 30s alternate infinite;
-    perspective: 200px;
-    transform: translateX(26px);
-    text-align: center;
-    font-family: "principal-font", 'Ubuntu', sans-serif;
-    color: #A8A6A1;
-    font-size: 2rem;
-    margin-bottom: 69px;
-    padding-bottom: 20px;
-}
-
 .contenu {
     height: 1300px;
     width: 99%;
@@ -324,9 +309,13 @@ footer p a {
     font-family: "principal-font", 'Ubuntu', sans-serif;
     width: 300px;
     margin: auto;
+    font-size: 1.1rem;
+    font-weight: 100;
 }
 
 .contenu h4 {
+    color: var(--title2-color);
+    font-weight: 400;
     padding: 20px;
     font-size: 1.6rem;
     font-family: "title-font", 'Lobster', cursive;
